完成基础补全和高亮

--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
       "language": "sgezcc",
       "scopeName": "source.ezcc",
       "path": "./syntaxes/sgezcc.tmLanguage.json"
-    }]
+    }],
+    "snippets": [
+      {
+        "language": "sgezcc",
+        "path": "./snippets/sgezcc.snippets.json"
+      }
+    ]
   }
 }
